<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginActivityBg"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="48sp"
        android:layout_above="@id/login_form"
        android:textColor="@color/colorAccentSecond"
        />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        >
        <!-- LoginData progress -->
        <RelativeLayout
            android:id="@+id/login_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:id="@+id/login_progress_bar"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorAccent"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_below="@id/login_progress_bar"
                android:layout_centerInParent="true"
                android:textColor="@color/colorAccent"
                android:id="@+id/login_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/login_input_form"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prompt_login">

                <AutoCompleteTextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:hint="@string/prompt_login"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/prompt_password"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_height"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccentSecond"
                android:textSize="@dimen/main_text_size"
                android:text="@string/login_btn_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                />

            <Button
                android:id="@+id/test_registration_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:textSize="@dimen/main_text_size"
                android:text="@string/testreg_btn_text"
                android:textAllCaps="false"
                android:textColor="@color/colorAccentSecond"
                />
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/copyright_text"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"/>
</RelativeLayout>
</layout>